weifuwuday4/yaml/istio/nginx-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  generation: 3
  name: nginx-gateway
  namespace: nginx
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - my.gateway.com
    port:
      name: http
      number: 80
      protocol: HTTP
