weifuwuday4/yaml/istio/nginx-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-vs
  namespace: nginx
spec:
  gateways:
  - nginx-gateway
  hosts:
  - my.gateway.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-test.default.svc.cluster.local
        port:
          number: 80
